--- a/css/responsive/_general.scss
+++ b/css/responsive/_general.scss
@@ -39,8 +39,8 @@
       font-size: x-large;
     }
 
-    //anchor close response
-    #response-close {
+    //anchor cloose response
+    #response-cloose {
       width: 1.5rem;
       height: 1.5rem;
       display: flex;
@@ -130,7 +130,7 @@
     padding: .5rem 0;
     @include shadow($light);
 
-    .btn-close {
+    .btn-cloose {
       width: 1rem;
       height: 1rem;
       display: flex;
@@ -166,57 +166,116 @@
 //link info
 #info {
   position: absolute;
-  width: 99%;
-  transform:none;
-  transition:scale ease .5s;
-  z-index:1;
-  &.hidden{
-    width:0;
-    height:0;
+  width: 99.9%;
+  height: 99vh;
+  z-index: 1;
+  transform: none;
+  transition: scale ease .5s;
+
+  &.hidden {
+    width: 0;
+    height: 0;
     transform: scale(0);
   }
-  //sublink deconnexion
-  #deconnexion {
-    position: absolute;
-    right: 2rem;
-    top: 2rem;
-    transform: translate(-50%, -50%);
 
-    button {
-      width: 2rem;
-    }
-  }
-
-  //sublink info view
-  #info-view {
+  header {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    height: 30rem;
-    transform: none;
-    transition: all ease .5s;
+    justify-content: center;
+    position: relative;
 
-    &.hidden {
-      width: 0;
-      height: 0;
-      transform: scale(0);
-    }
-
-    //anchor title info
     h1 {
       #username {
         text-transform: uppercase;
       }
     }
 
-    //anchor role content
-    #role-content {
+    //sublink deconnexion
+    #deconnexion {
+      position: absolute;
+      right: 1rem;
+
+      button {
+        width: 2rem;
+      }
+    }
+  }
+
+  .role-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid pink;
+    position: relative;
+    .view-content {
+      border: 1px solid red;
+      height: 35%;
       display: flex;
       flex-direction: row;
+      align-items: center;
       justify-content: space-around;
-      width: 99%;
-      //subanchor role
+      position: relative;
+      .view-cat {
+        border: 1px solid lime;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        transform:translate(-50%,-50%);
+        .circle{
+          border: 4px dashed transparent;
+          border-radius:50px;
+          animation-duration: 10s;
+          animation-timing-function: linear;
+          animation-iteration-count: infinite;
+        }
+        svg {
+          position: absolute;
+          margin: 0;
+          padding:0;
+          transform: none;
+          &.full-thumbs {
+            display: none;
+          }
+        }
+
+      }
+
+      &#win-content {
+        .view-cat {
+          .circle{
+            border-top-color:$tankLight;
+            border-left-color:$tankLight;
+            border-right-color:$tankDark;
+            border-bottom-color:$tankDark;
+            animation-name: spinWin, borderFillWin;
+          }
+          svg {
+            fill: $tankLight;
+            animation: shadeFillWin 10s ease-in-out infinite;
+          }
+        }
+      }
+
+      &#loose-content {
+        .view-cat {
+          .circle{
+            border-top-color:$dpsLight;
+            border-left-color:$dpsLight;
+            border-right-color:$dpsDark;
+            border-bottom-color:$dpsDark;
+            //animation-name: spinLoose, borderFillLoose;
+          }
+          svg {
+            fill: $dpsLight;
+            animation: shadeFillLoose 10s ease-in-out infinite;
+          }
+        }
+      }
+
       .role {
+        border: 1px solid lime;//remove 
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -270,6 +329,7 @@
           justify-content: space-around;
           position: relative;
           background: $dark;
+
           &::before {
             content: '';
             position: absolute;
@@ -408,37 +468,45 @@
         }
       }
     }
-
-    //anchor confirm popup
-    #confirm-popup {
-      position: absolute;
-      border-radius: 10px;
-      @include background;
-      border: 1px solid;
-      padding: .5rem;
-      height: 5rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      transform: none;
-      transition: scale ease .5s;
-
-      &.hidden {
-        height: 0;
-        width: 0;
-        transform: scale(0);
-      }
-
-      //subanchor btn content popup
-      .btn-content {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-      }
-    }
   }
 
-  #info-hidden {
-    display: none;
+  #reset-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #confirm-popup {
+    position: absolute;
+    border-radius: 10px;
+    @include background;
+    border: 1px solid;
+    padding: .5rem;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    transition: all ease .5s;
+
+    &.hidden {
+      height: 0;
+      width: 0;
+      transform: scale(0);
+      h4{
+        transform: scale(0);
+      }
+      .btn-content{
+        transform: scale(0);
+      }
+    }
+
+    //subanchor btn content popup
+    .btn-content {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
   }
 }
