--- a/css/responsive/_laptop.scss
+++ b/css/responsive/_laptop.scss
@@ -3,31 +3,56 @@
     width:3rem;
     height:2rem;
   }
-  #info-view {
-    margin-top: 15rem;
-    justify-content: space-around;
-    #role-content{
-      height: 20rem;
-      .role{
-        .role-icon{
-          width: 1.5rem;
-          height: 1.5rem;
-        }
-        fieldset{
-          width: 15rem;
-          height: 10rem;
-          &::before{
-            width: 15.4rem;
-            height: 10.7rem;
+  #info{
+    .role-content{
+      height: 70%;
+      .view-content{
+        //height: 35%;
+        .view-cat{
+          top:11rem;
+          .circle{
+            width: 4.5rem;
+            height: 4.5rem;
           }
-          span{
-            top: 3.5rem;
+          svg{
+            width: 3rem;
+          }
+          &.left-view{
+            left: 5rem;
+          }
+          &.right-view{
+            right: 0;
+          }
+        }
+        &#win-content{
+          svg{
+            top: 15%;
+          }
+        }
+        &#loose-content{
+          top: 25%;
+        }
+        .role{
+          .role-icon{
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+          fieldset{
+            width: 15rem;
+            height: 10rem;
+            &::before{
+              width: 15.4rem;
+              height: 10.7rem;
+            }
+            span{
+              top: 3.5rem;
+            }
           }
         }
       }
     }
     #confirm-popup{
-      top: 65%;
+      top: 45%;
     }
   }
 }
