--- a/css/responsive/_mobile.scss
+++ b/css/responsive/_mobile.scss
@@ -1,71 +1,93 @@
-@media screen and (min-width: 378px){
+@media screen and (min-width: 378px) {
 
 }
+
 @media screen and (min-width: 378px) and (orientation: portrait) {
-  .btn-minus,.btn-plus{
-    width:3rem;
-    height:2rem;
+  .btn-minus, .btn-plus {
+    width: 3rem;
+    height: 2rem;
   }
-  #info-view {
-    margin-top: 15rem;
-    justify-content: space-around;
-    #role-content{
-      height: 20rem;
-      .role{
-        .role-icon{
-          width: 1.5rem;
-          height: 1.5rem;
-        }
-        fieldset{
-          width: 15rem;
-          height: 10rem;
-          &::before{
-            width: 15.4rem;
-            height: 10.7rem;
-          }
-          span{
-            top: 3.5rem;
-          }
-        }
-      }
-    }
-    #confirm-popup{
-      top: 65%;
-    }
-  }
-}
+  #info {
+    .role-content {
+      height: 65%;
+      .view-content {
+        height: 50%;
 
-@media screen and (min-width:378px) and (orientation: landscape){
-  .btn-minus,.btn-plus{
-    width:2rem;
-    height:1.5rem;
-  }
-  #info-view{
-    margin-top: 0;
-    height:5rem;
-    #role-content{
-      height:15rem;
-      margin: 2rem 0;
-      .role{
-        .role-icon{
-          width: 1rem;
-          height: 1rem;
-        }
-        fieldset{
-          width: 15rem;
-          height: 8rem;
-          &::before{
-            width: 15.4rem;
-            height: 8.8rem;
+        .view-cat {
+          top: 15%;
+          left: 50%;
+          .circle{
+            width: 4rem;
+            height: 4rem;
           }
-          span{
-            top: 3rem;
+          svg {
+            width: 3rem;
+          }
+        }
+
+        .role {
+          height: 16rem;
+
+          .role-icon {
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+
+          fieldset {
+            width: 15rem;
+            height: 10rem;
+
+            &::before {
+              width: 15.4rem;
+              height: 10.7rem;
+            }
+
+            span {
+              top: 3.5rem;
+            }
           }
         }
       }
+    }
+    .btn-reset{
+      width:9rem;
+      height:2rem;
     }
     #confirm-popup {
       top: 30%;
+    }
+  }
+}
+
+@media screen and (min-width: 378px) and (orientation: landscape) {
+  .btn-minus, .btn-plus {
+    width: 2rem;
+    height: 1.5rem;
+  }
+  #info {
+    .role-content {
+      .view-content {
+        .role {
+          .role-icon {
+            width: 1rem;
+            height: 1rem;
+          }
+
+          fieldset {
+            width: 15rem;
+            height: 8rem;
+
+            &::before {
+              width: 15.4rem;
+              height: 8.8rem;
+            }
+
+            span {
+              top: 3rem;
+            }
+          }
+        }
+      }
     }
   }
 }
