--- a/view/info.html
+++ b/view/info.html
@@ -1,33 +1,38 @@
-<!--link info-->
 <main id="info">
-	<!--sublink logout-->
-	<form action="controller/function/login&register.php?task=deconnexion" id="deconnexion" method="post">
-		<button class="btn btn-logout" type="submit">
-			<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-				<path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V256c0 17.7 14.3 32 32 32s32-14.3 32-32V32zM143.5 120.6c13.6-11.3 15.4-31.5 4.1-45.1s-31.5-15.4-45.1-4.1C49.7 115.4 16 181.8 16 256c0 132.5 107.5 240 240 240s240-107.5 240-240c0-74.2-33.8-140.6-86.6-184.6c-13.6-11.3-33.8-9.4-45.1 4.1s-9.4 33.8 4.1 45.1c38.9 32.3 63.5 81 63.5 135.4c0 97.2-78.8 176-176 176s-176-78.8-176-176c0-54.4 24.7-103.1 63.5-135.4z"/>
-			</svg>
-		</button>
-	</form>
-	<!--sublink info view-->
-	<section id="info-view">
-		<!--anchor hello username-->
+	<header>
 		<h1>
 			<span>Bonjour</span>
 			<span id="username"></span>
 		</h1>
-		<!--anchor role content-->
-		<div id="role-content">
-			<!--subanchor tank-->
-			<div id="win-content">
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon tank">
+
+		<form action="controller/function/login&register.php?task=deconnexion" id="deconnexion" method="post">
+			<button class="btn btn-logout" type="submit">
+				<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V256c0 17.7 14.3 32 32 32s32-14.3 32-32V32zM143.5 120.6c13.6-11.3 15.4-31.5 4.1-45.1s-31.5-15.4-45.1-4.1C49.7 115.4 16 181.8 16 256c0 132.5 107.5 240 240 240s240-107.5 240-240c0-74.2-33.8-140.6-86.6-184.6c-13.6-11.3-33.8-9.4-45.1 4.1s-9.4 33.8 4.1 45.1c38.9 32.3 63.5 81 63.5 135.4c0 97.2-78.8 176-176 176s-176-78.8-176-176c0-54.4 24.7-103.1 63.5-135.4z"/>
+				</svg>
+			</button>
+		</form>
+	</header>
+	<section class="role-content">
+		<section class="view-content" id="win-content">
+			<span class="view-cat left-view">
+				<div class="circle "></div>
+				<svg class="empty-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M323.8 34.8c-38.2-10.9-78.1 11.2-89 49.4l-5.7 20c-3.7 13-10.4 25-19.5 35l-51.3 56.4c-8.9 9.8-8.2 25 1.6 33.9s25 8.2 33.9-1.6l51.3-56.4c14.1-15.5 24.4-34 30.1-54.1l5.7-20c3.6-12.7 16.9-20.1 29.7-16.5s20.1 16.9 16.5 29.7l-5.7 20c-5.7 19.9-14.7 38.7-26.6 55.5c-5.2 7.3-5.8 16.9-1.7 24.9s12.3 13 21.3 13L448 224c8.8 0 16 7.2 16 16c0 6.8-4.3 12.7-10.4 15c-7.4 2.8-13 9-14.9 16.7s.1 15.8 5.3 21.7c2.5 2.8 4 6.5 4 10.6c0 7.8-5.6 14.3-13 15.7c-8.2 1.6-15.1 7.3-18 15.2s-1.6 16.7 3.6 23.3c2.1 2.7 3.4 6.1 3.4 9.9c0 6.7-4.2 12.6-10.2 14.9c-11.5 4.5-17.7 16.9-14.4 28.8c.4 1.3 .6 2.8 .6 4.3c0 8.8-7.2 16-16 16H286.5c-12.6 0-25-3.7-35.5-10.7l-61.7-41.1c-11-7.4-25.9-4.4-33.3 6.7s-4.4 25.9 6.7 33.3l61.7 41.1c18.4 12.3 40 18.8 62.1 18.8H384c34.7 0 62.9-27.6 64-62c14.6-11.7 24-29.7 24-50c0-4.5-.5-8.8-1.3-13c15.4-11.7 25.3-30.2 25.3-51c0-6.5-1-12.8-2.8-18.7C504.8 273.7 512 257.7 512 240c0-35.3-28.6-64-64-64l-92.3 0c4.7-10.4 8.7-21.2 11.8-32.2l5.7-20c10.9-38.2-11.2-78.1-49.4-89zM32 192c-17.7 0-32 14.3-32 32V448c0 17.7 14.3 32 32 32H96c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32H32z"/>
+				</svg>
+				<svg class="full-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M313.4 32.9c26 5.2 42.9 30.5 37.7 56.5l-2.3 11.4c-5.3 26.7-15.1 52.1-28.8 75.2H464c26.5 0 48 21.5 48 48c0 18.5-10.5 34.6-25.9 42.6C497 275.4 504 288.9 504 304c0 23.4-16.8 42.9-38.9 47.1c4.4 7.3 6.9 15.8 6.9 24.9c0 21.3-13.9 39.4-33.1 45.6c.7 3.3 1.1 6.8 1.1 10.4c0 26.5-21.5 48-48 48H294.5c-19 0-37.5-5.6-53.3-16.1l-38.5-25.7C176 420.4 160 390.4 160 358.3V320 272 247.1c0-29.2 13.3-56.7 36-75l7.4-5.9c26.5-21.2 44.6-51 51.2-84.2l2.3-11.4c5.2-26 30.5-42.9 56.5-37.7zM32 192H96c17.7 0 32 14.3 32 32V448c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V224c0-17.7 14.3-32 32-32z"/>
+				</svg>
+			</span>
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon tank">
 					<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 						<path d="M256 0c4.6 0 9.2 1 13.4 2.9L457.7 82.8c22 9.3 38.4 31 38.3 57.2c-.5 99.2-41.3 280.7-213.7 363.2c-16.7 8-36.1 8-52.8 0C57.3 420.7 16.5 239.2 16 140c-.1-26.2 16.3-47.9 38.3-57.2L242.7 2.9C246.8 1 251.4 0 256 0zm0 66.8V444.8C394 378 431.1 230.1 432 141.4L256 66.8l0 0z"/>
 					</svg>
 				</span>
 
-					<fieldset class="tank">
+				<fieldset class="tank">
 					<span>
 						<form action="controller/function/updateDatabase.php?task=winTankDec" id="winTankDec" method="post">
 							<button class="btn btn-minus" type="submit">
@@ -47,19 +52,18 @@
 							</button>
 						</form>
 					</span>
-					</fieldset>
-				</div>
-
-				<!--subanchor dps-->
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon dps">
+				</fieldset>
+			</div>
+			<!--subanchor dps-->
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon dps">
 					<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 						<path d="M256 0c17.7 0 32 14.3 32 32V42.4c93.7 13.9 167.7 88 181.6 181.6H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H469.6c-13.9 93.7-88 167.7-181.6 181.6V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V469.6C130.3 455.7 56.3 381.7 42.4 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H42.4C56.3 130.3 130.3 56.3 224 42.4V32c0-17.7 14.3-32 32-32zM107.4 288c12.5 58.3 58.4 104.1 116.6 116.6V384c0-17.7 14.3-32 32-32s32 14.3 32 32v20.6c58.3-12.5 104.1-58.4 116.6-116.6H384c-17.7 0-32-14.3-32-32s14.3-32 32-32h20.6C392.1 165.7 346.3 119.9 288 107.4V128c0 17.7-14.3 32-32 32s-32-14.3-32-32V107.4C165.7 119.9 119.9 165.7 107.4 224H128c17.7 0 32 14.3 32 32s-14.3 32-32 32H107.4zM256 288c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"/>
 					</svg>
 				</span>
 
-					<fieldset class="dps">
+				<fieldset class="dps">
 					<span>
 						<form action="controller/function/updateDatabase.php?task=winDpsDec" id="winDpsDec" method="post">
 							<button class="btn btn-minus" type="submit">
@@ -77,19 +81,18 @@
 							</button>
 						</form>
 					</span>
-					</fieldset>
-				</div>
-
-				<!--subanchor heal-->
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon heal">
+				</fieldset>
+			</div>
+			<!--subanchor heal-->
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon heal">
 					<svg viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
 						<path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H96V32H64zm64 0V480H448V32H128zM512 480c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H480V480h32zM256 176c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v48h48c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H320v48c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V288H208c-8.8 0-16-7.2-16-16V240c0-8.8 7.2-16 16-16h48V176z"/>
 					</svg>
 				</span>
 
-					<fieldset class="heal">
+				<fieldset class="heal">
 					<span>
 						<form action="controller/function/updateDatabase.php?task=winHealDec" id="winHealDec" method="post">
 							<button class="btn btn-minus" type="submit">
@@ -107,18 +110,36 @@
 							</button>
 						</form>
 					</span>
-					</fieldset>
-				</div>
+				</fieldset>
 			</div>
-			<div id="loose-content">
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon tank">
+			<span class="view-cat right-view">
+				<div class="circle"></div>
+				<svg class="empty-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M323.8 34.8c-38.2-10.9-78.1 11.2-89 49.4l-5.7 20c-3.7 13-10.4 25-19.5 35l-51.3 56.4c-8.9 9.8-8.2 25 1.6 33.9s25 8.2 33.9-1.6l51.3-56.4c14.1-15.5 24.4-34 30.1-54.1l5.7-20c3.6-12.7 16.9-20.1 29.7-16.5s20.1 16.9 16.5 29.7l-5.7 20c-5.7 19.9-14.7 38.7-26.6 55.5c-5.2 7.3-5.8 16.9-1.7 24.9s12.3 13 21.3 13L448 224c8.8 0 16 7.2 16 16c0 6.8-4.3 12.7-10.4 15c-7.4 2.8-13 9-14.9 16.7s.1 15.8 5.3 21.7c2.5 2.8 4 6.5 4 10.6c0 7.8-5.6 14.3-13 15.7c-8.2 1.6-15.1 7.3-18 15.2s-1.6 16.7 3.6 23.3c2.1 2.7 3.4 6.1 3.4 9.9c0 6.7-4.2 12.6-10.2 14.9c-11.5 4.5-17.7 16.9-14.4 28.8c.4 1.3 .6 2.8 .6 4.3c0 8.8-7.2 16-16 16H286.5c-12.6 0-25-3.7-35.5-10.7l-61.7-41.1c-11-7.4-25.9-4.4-33.3 6.7s-4.4 25.9 6.7 33.3l61.7 41.1c18.4 12.3 40 18.8 62.1 18.8H384c34.7 0 62.9-27.6 64-62c14.6-11.7 24-29.7 24-50c0-4.5-.5-8.8-1.3-13c15.4-11.7 25.3-30.2 25.3-51c0-6.5-1-12.8-2.8-18.7C504.8 273.7 512 257.7 512 240c0-35.3-28.6-64-64-64l-92.3 0c4.7-10.4 8.7-21.2 11.8-32.2l5.7-20c10.9-38.2-11.2-78.1-49.4-89zM32 192c-17.7 0-32 14.3-32 32V448c0 17.7 14.3 32 32 32H96c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32H32z"/>
+				</svg>
+				<svg class="full-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M313.4 32.9c26 5.2 42.9 30.5 37.7 56.5l-2.3 11.4c-5.3 26.7-15.1 52.1-28.8 75.2H464c26.5 0 48 21.5 48 48c0 18.5-10.5 34.6-25.9 42.6C497 275.4 504 288.9 504 304c0 23.4-16.8 42.9-38.9 47.1c4.4 7.3 6.9 15.8 6.9 24.9c0 21.3-13.9 39.4-33.1 45.6c.7 3.3 1.1 6.8 1.1 10.4c0 26.5-21.5 48-48 48H294.5c-19 0-37.5-5.6-53.3-16.1l-38.5-25.7C176 420.4 160 390.4 160 358.3V320 272 247.1c0-29.2 13.3-56.7 36-75l7.4-5.9c26.5-21.2 44.6-51 51.2-84.2l2.3-11.4c5.2-26 30.5-42.9 56.5-37.7zM32 192H96c17.7 0 32 14.3 32 32V448c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V224c0-17.7 14.3-32 32-32z"/>
+				</svg>
+			</span>
+		</section>
+		<section class="view-content" id="loose-content">
+			<span class="view-cat left-view">
+				<div class="circle "></div>
+				<svg class="empty-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M323.8 477.2c-38.2 10.9-78.1-11.2-89-49.4l-5.7-20c-3.7-13-10.4-25-19.5-35l-51.3-56.4c-8.9-9.8-8.2-25 1.6-33.9s25-8.2 33.9 1.6l51.3 56.4c14.1 15.5 24.4 34 30.1 54.1l5.7 20c3.6 12.7 16.9 20.1 29.7 16.5s20.1-16.9 16.5-29.7l-5.7-20c-5.7-19.9-14.7-38.7-26.6-55.5c-5.2-7.3-5.8-16.9-1.7-24.9s12.3-13 21.3-13L448 288c8.8 0 16-7.2 16-16c0-6.8-4.3-12.7-10.4-15c-7.4-2.8-13-9-14.9-16.7s.1-15.8 5.3-21.7c2.5-2.8 4-6.5 4-10.6c0-7.8-5.6-14.3-13-15.7c-8.2-1.6-15.1-7.3-18-15.2s-1.6-16.7 3.6-23.3c2.1-2.7 3.4-6.1 3.4-9.9c0-6.7-4.2-12.6-10.2-14.9c-11.5-4.5-17.7-16.9-14.4-28.8c.4-1.3 .6-2.8 .6-4.3c0-8.8-7.2-16-16-16H286.5c-12.6 0-25 3.7-35.5 10.7l-61.7 41.1c-11 7.4-25.9 4.4-33.3-6.7s-4.4-25.9 6.7-33.3l61.7-41.1c18.4-12.3 40-18.8 62.1-18.8H384c34.7 0 62.9 27.6 64 62c14.6 11.7 24 29.7 24 50c0 4.5-.5 8.8-1.3 13c15.4 11.7 25.3 30.2 25.3 51c0 6.5-1 12.8-2.8 18.7C504.8 238.3 512 254.3 512 272c0 35.3-28.6 64-64 64l-92.3 0c4.7 10.4 8.7 21.2 11.8 32.2l5.7 20c10.9 38.2-11.2 78.1-49.4 89zM32 384c-17.7 0-32-14.3-32-32V128c0-17.7 14.3-32 32-32H96c17.7 0 32 14.3 32 32V352c0 17.7-14.3 32-32 32H32z"/>
+				</svg>
+				<svg class="full-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+			    <path d="M313.4 479.1c26-5.2 42.9-30.5 37.7-56.5l-2.3-11.4c-5.3-26.7-15.1-52.1-28.8-75.2H464c26.5 0 48-21.5 48-48c0-18.5-10.5-34.6-25.9-42.6C497 236.6 504 223.1 504 208c0-23.4-16.8-42.9-38.9-47.1c4.4-7.3 6.9-15.8 6.9-24.9c0-21.3-13.9-39.4-33.1-45.6c.7-3.3 1.1-6.8 1.1-10.4c0-26.5-21.5-48-48-48H294.5c-19 0-37.5 5.6-53.3 16.1L202.7 73.8C176 91.6 160 121.6 160 153.7V192v48 24.9c0 29.2 13.3 56.7 36 75l7.4 5.9c26.5 21.2 44.6 51 51.2 84.2l2.3 11.4c5.2 26 30.5 42.9 56.5 37.7zM32 384H96c17.7 0 32-14.3 32-32V128c0-17.7-14.3-32-32-32H32C14.3 96 0 110.3 0 128V352c0 17.7 14.3 32 32 32z"/>
+				</svg>
+			</span>
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon tank">
 					<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 						<path d="M256 0c4.6 0 9.2 1 13.4 2.9L457.7 82.8c22 9.3 38.4 31 38.3 57.2c-.5 99.2-41.3 280.7-213.7 363.2c-16.7 8-36.1 8-52.8 0C57.3 420.7 16.5 239.2 16 140c-.1-26.2 16.3-47.9 38.3-57.2L242.7 2.9C246.8 1 251.4 0 256 0zm0 66.8V444.8C394 378 431.1 230.1 432 141.4L256 66.8l0 0z"/>
 					</svg>
 				</span>
-					<fieldset class="tank">
+				<fieldset class="tank">
 					<span>
 						<form action="controller/function/updateDatabase.php?task=looseTankDec" id="looseTankDec" method="post">
 							<button class="btn btn-minus" type="submit">
@@ -136,18 +157,17 @@
 							</button>
 						</form>
 					</span>
-					</fieldset>
-				</div>
-
-				<!--subanchor dps-->
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon dps">
+				</fieldset>
+			</div>
+			<!--subanchor dps-->
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon dps">
 						<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 							<path d="M256 0c17.7 0 32 14.3 32 32V42.4c93.7 13.9 167.7 88 181.6 181.6H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H469.6c-13.9 93.7-88 167.7-181.6 181.6V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V469.6C130.3 455.7 56.3 381.7 42.4 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H42.4C56.3 130.3 130.3 56.3 224 42.4V32c0-17.7 14.3-32 32-32zM107.4 288c12.5 58.3 58.4 104.1 116.6 116.6V384c0-17.7 14.3-32 32-32s32 14.3 32 32v20.6c58.3-12.5 104.1-58.4 116.6-116.6H384c-17.7 0-32-14.3-32-32s14.3-32 32-32h20.6C392.1 165.7 346.3 119.9 288 107.4V128c0 17.7-14.3 32-32 32s-32-14.3-32-32V107.4C165.7 119.9 119.9 165.7 107.4 224H128c17.7 0 32 14.3 32 32s-14.3 32-32 32H107.4zM256 288c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"/>
 						</svg>
 					</span>
-					<fieldset class="dps">
+				<fieldset class="dps">
 						<span>
 							<form action="controller/function/updateDatabase.php?task=looseDpsDec" id="looseDpsDec" method="post">
 								<button class="btn btn-minus" type="submit">
@@ -165,19 +185,18 @@
 								</button>
 							</form>
 						</span>
-					</fieldset>
-				</div>
-
-				<!--subanchor heal-->
-				<div class="role">
-					<!--anchorlink role icon-->
-					<span class="role-icon heal">
+				</fieldset>
+			</div>
+			<!--subanchor heal-->
+			<div class="role">
+				<!--anchorlink role icon-->
+				<span class="role-icon heal">
 					<svg viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
 						<path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H96V32H64zm64 0V480H448V32H128zM512 480c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H480V480h32zM256 176c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v48h48c8.8 0 16 7.2 16 16v32c0 8.8-7.2 16-16 16H320v48c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V288H208c-8.8 0-16-7.2-16-16V240c0-8.8 7.2-16 16-16h48V176z"/>
 					</svg>
 				</span>
 
-					<fieldset class="heal">
+				<fieldset class="heal">
 					<span>
 						<form action="controller/function/updateDatabase.php?task=looseHealDec" id="looseHealDec" method="post">
 							<button class="btn btn-minus" type="submit">
@@ -195,12 +214,21 @@
 							</button>
 						</form>
 					</span>
-					</fieldset>
-				</div>
+				</fieldset>
 			</div>
+			<span class="view-cat right-view">
+				<div class="circle"></div>
+				<svg class="empty-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+					<path d="M323.8 477.2c-38.2 10.9-78.1-11.2-89-49.4l-5.7-20c-3.7-13-10.4-25-19.5-35l-51.3-56.4c-8.9-9.8-8.2-25 1.6-33.9s25-8.2 33.9 1.6l51.3 56.4c14.1 15.5 24.4 34 30.1 54.1l5.7 20c3.6 12.7 16.9 20.1 29.7 16.5s20.1-16.9 16.5-29.7l-5.7-20c-5.7-19.9-14.7-38.7-26.6-55.5c-5.2-7.3-5.8-16.9-1.7-24.9s12.3-13 21.3-13L448 288c8.8 0 16-7.2 16-16c0-6.8-4.3-12.7-10.4-15c-7.4-2.8-13-9-14.9-16.7s.1-15.8 5.3-21.7c2.5-2.8 4-6.5 4-10.6c0-7.8-5.6-14.3-13-15.7c-8.2-1.6-15.1-7.3-18-15.2s-1.6-16.7 3.6-23.3c2.1-2.7 3.4-6.1 3.4-9.9c0-6.7-4.2-12.6-10.2-14.9c-11.5-4.5-17.7-16.9-14.4-28.8c.4-1.3 .6-2.8 .6-4.3c0-8.8-7.2-16-16-16H286.5c-12.6 0-25 3.7-35.5 10.7l-61.7 41.1c-11 7.4-25.9 4.4-33.3-6.7s-4.4-25.9 6.7-33.3l61.7-41.1c18.4-12.3 40-18.8 62.1-18.8H384c34.7 0 62.9 27.6 64 62c14.6 11.7 24 29.7 24 50c0 4.5-.5 8.8-1.3 13c15.4 11.7 25.3 30.2 25.3 51c0 6.5-1 12.8-2.8 18.7C504.8 238.3 512 254.3 512 272c0 35.3-28.6 64-64 64l-92.3 0c4.7 10.4 8.7 21.2 11.8 32.2l5.7 20c10.9 38.2-11.2 78.1-49.4 89zM32 384c-17.7 0-32-14.3-32-32V128c0-17.7 14.3-32 32-32H96c17.7 0 32 14.3 32 32V352c0 17.7-14.3 32-32 32H32z"/>
+				</svg>
+				<svg class="full-thumbs" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+			    <path d="M313.4 479.1c26-5.2 42.9-30.5 37.7-56.5l-2.3-11.4c-5.3-26.7-15.1-52.1-28.8-75.2H464c26.5 0 48-21.5 48-48c0-18.5-10.5-34.6-25.9-42.6C497 236.6 504 223.1 504 208c0-23.4-16.8-42.9-38.9-47.1c4.4-7.3 6.9-15.8 6.9-24.9c0-21.3-13.9-39.4-33.1-45.6c.7-3.3 1.1-6.8 1.1-10.4c0-26.5-21.5-48-48-48H294.5c-19 0-37.5 5.6-53.3 16.1L202.7 73.8C176 91.6 160 121.6 160 153.7V192v48 24.9c0 29.2 13.3 56.7 36 75l7.4 5.9c26.5 21.2 44.6 51 51.2 84.2l2.3 11.4c5.2 26 30.5 42.9 56.5 37.7zM32 384H96c17.7 0 32-14.3 32-32V128c0-17.7-14.3-32-32-32H32C14.3 96 0 110.3 0 128V352c0 17.7 14.3 32 32 32z"/>
+				</svg>
+			</span>
+		</section>
+	</section>
 
-		</div>
-
+	<div id="reset-content">
 		<div class="btn btn-reset" id="reset-btn">
 			<span>
 				<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
@@ -209,21 +237,22 @@
 			</span>
 			<h4>Reset All</h4>
 		</div>
+	</div>
 
-		<div id="confirm-popup">
-			<h4>Vous être sur de vouloir reset tout</h4>
-			<div class="btn-content">
-				<form action="controller/function/updateData.php?task=resetAll" id="resetAll" method="post">
-					<button type="submit" class="btn btn-valid btn-valid-reset" id="valid-reset">
+	<div id="confirm-popup">
+		<h4>Vous être sur de vouloir reset tout</h4>
+		<div class="btn-content">
+			<form action="controller/function/updateData.php?task=resetAll" id="resetAll" method="post">
+				<button class="btn btn-valid btn-valid-reset" id="valid-reset" type="submit">
 						<span>
 							<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
 								<path d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7 425.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/>
 							</svg>
 						</span>
-						<h5>Yes</h5>
-					</button>
-				</form>
-				<span class="btn btn-cancel" id="cancel-reset">
+					<h5>Yes</h5>
+				</button>
+			</form>
+			<span class="btn btn-cancel" id="cancel-reset">
 					<span>
 						<svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
 							<path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/>
@@ -231,7 +260,6 @@
 					</span>
 					<h5>No</h5>
 				</span>
-			</div>
 		</div>
-	</section>
+	</div>
 </main>
