--- a/css/responsive/_general.scss
+++ b/css/responsive/_general.scss
@@ -39,8 +39,8 @@
       font-size: x-large;
     }
 
-    //anchor cloose response
-    #response-cloose {
+    //anchor close response
+    #response-close {
       width: 1.5rem;
       height: 1.5rem;
       display: flex;
@@ -130,7 +130,7 @@
     padding: .5rem 0;
     @include shadow($light);
 
-    .btn-cloose {
+    .btn-close {
       width: 1rem;
       height: 1rem;
       display: flex;
@@ -200,282 +200,281 @@
       }
     }
   }
-
-  .role-content {
+  #view{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid pink;
-    position: relative;
-    .view-content {
-      border: 1px solid red;
-      height: 35%;
+    .role-content {
       display: flex;
-      flex-direction: row;
-      align-items: center;
+      flex-direction: column;
       justify-content: space-around;
       position: relative;
-      .view-cat {
-        border: 1px solid lime;
+      .view-content {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        transform:translate(-50%,-50%);
-        .circle{
-          border: 4px dashed transparent;
-          border-radius:50px;
-          animation-duration: 10s;
-          animation-timing-function: linear;
-          animation-iteration-count: infinite;
-        }
-        svg {
-          position: absolute;
-          margin: 0;
-          padding:0;
-          transform: none;
-          &.full-thumbs {
-            display: none;
-          }
-        }
-
-      }
-
-      &#win-content {
-        .view-cat {
-          .circle{
-            border-top-color:$tankLight;
-            border-left-color:$tankLight;
-            border-right-color:$tankDark;
-            border-bottom-color:$tankDark;
-            animation-name: spinWin, borderFillWin;
-          }
-          svg {
-            fill: $tankLight;
-            animation: shadeFillWin 10s ease-in-out infinite;
-          }
-        }
-      }
-
-      &#loose-content {
-        .view-cat {
-          .circle{
-            border-top-color:$dpsLight;
-            border-left-color:$dpsLight;
-            border-right-color:$dpsDark;
-            border-bottom-color:$dpsDark;
-            //animation-name: spinLoose, borderFillLoose;
-          }
-          svg {
-            fill: $dpsLight;
-            animation: shadeFillLoose 10s ease-in-out infinite;
-          }
-        }
-      }
-
-      .role {
-        border: 1px solid lime;//remove 
-        height: 100%;
-        display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        //anchorlink role icon
-        .role-icon {
+        position: relative;
+        .view-cat {
+          position: absolute;
           display: flex;
           justify-content: center;
           align-items: center;
-          padding: 1rem;
-          border: 2px solid;
-          border-radius: 50px;
-
+          transform:translate(-50%,-50%);
+          .circle{
+            border: 4px dashed transparent;
+            border-radius:50px;
+            animation-duration: 10s;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+          }
           svg {
-            width: 2rem;
-            height: 2rem;
+            position: absolute;
+            margin: 0;
+            padding:0;
+            transform: none;
+            &.full-thumbs {
+              display: none;
+            }
           }
 
-          &.tank {
-            @include borderTL($tankLight);
-            @include borderBR($tankDark);
-
+        }
+        .right-view{
+          svg{
+            transform: rotate(180deg);
+          }
+        }
+        &#win-content {
+          .view-cat {
+            .circle{
+              border-top-color:$tankLight;
+              border-left-color:$tankLight;
+              border-right-color:$tankDark;
+              border-bottom-color:$tankDark;
+              animation-name: spinWin, borderFillWin;
+            }
             svg {
               fill: $tankLight;
-            }
-          }
-
-          &.dps {
-            @include borderTL($dpsLight);
-            @include borderBR($dpsDark);
-
-            svg {
-              fill: $dpsLight;
-            }
-          }
-
-          &.heal {
-            @include borderTL($healLight);
-            @include borderBR($healDark);
-
-            svg {
-              fill: $healLight;
+              animation: shadeFillWin 10s ease-in-out infinite;
             }
           }
         }
-
-        //anchorlink fieldset
-        fieldset {
-          border-radius: 10px;
+        &#loose-content {
+          .view-cat {
+            .circle{
+              border-top-color:$dpsLight;
+              border-left-color:$dpsLight;
+              border-right-color:$dpsDark;
+              border-bottom-color:$dpsDark;
+              animation-name: spinLoose, borderFillLoose;
+            }
+            svg {
+              fill: $dpsLight;
+              animation: shadeFillLoose 10s ease-in-out infinite;
+            }
+          }
+        }
+        .role {
           display: flex;
+          flex-direction: column;
+          align-items: center;
           justify-content: space-around;
-          position: relative;
-          background: $dark;
-
-          &::before {
-            content: '';
-            position: absolute;
-            z-index: -1;
-            top: -.3rem;
-            border-radius: 10px;
-            animation: spin 2.5s linear infinite;
-          }
-
-          &.tank {
-            color: $tankLight;
-
-            .btn-minus {
-              background: $tankDark;
-              @include shadow($tankDark);
-
-              &:hover {
-                color: $tankDark;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $tankDark;
-                }
-              }
-            }
-
-            .btn-plus {
-              background: $tankLight;
-              @include shadow($tankLight);
-
-              &:hover {
-                color: $tankLight;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $tankLight;
-                }
-              }
-            }
-
-            &:before {
-              background-image: linear-gradient(var(--rotate), $tankLight 43%, $tankDark);
-            }
-          }
-
-          &.dps {
-            color: $dpsLight;
-
-            .btn-minus {
-              background: $dpsDark;
-              @include shadow($dpsDark);
-
-              &:hover {
-                color: $dpsDark;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $dpsDark;
-                }
-              }
-            }
-
-            .btn-plus {
-              background: $dpsLight;
-              @include shadow($dpsLight);
-
-              &:hover {
-                color: $dpsLight;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $dpsLight;
-                }
-              }
-            }
-
-            &:before {
-              background-image: linear-gradient(var(--rotate), $dpsLight 43%, $dpsDark);
-            }
-          }
-
-          &.heal {
-            color: $healLight;
-
-            .btn-minus {
-              background: $healDark;
-              @include shadow($healDark);
-
-              &:hover {
-                color: $healLight;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $healDark;
-                }
-              }
-            }
-
-            .btn-plus {
-              background: $healLight;
-              @include shadow($healLight);
-
-              &:hover {
-                color: $healDark;
-                border: none;
-                background: none;
-
-                svg {
-                  fill: $healDark;
-                }
-              }
-            }
-
-            &:before {
-              background-image: linear-gradient(var(--rotate), $healLight 43%, $healDark);
-            }
-          }
-
-          span {
-            width: 100%;
+          //anchorlink role icon
+          .role-icon {
             display: flex;
-            flex-direction: row;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
-            position: absolute;
+            padding: 1rem;
+            border: 2px solid;
+            border-radius: 50px;
 
-            h3 {
-              font-weight: bold;
+            svg {
+              width: 2rem;
+              height: 2rem;
+            }
+
+            &.tank {
+              @include borderTL($tankLight);
+              @include borderBR($tankDark);
+
+              svg {
+                fill: $tankLight;
+              }
+            }
+
+            &.dps {
+              @include borderTL($dpsLight);
+              @include borderBR($dpsDark);
+
+              svg {
+                fill: $dpsLight;
+              }
+            }
+
+            &.heal {
+              @include borderTL($healLight);
+              @include borderBR($healDark);
+
+              svg {
+                fill: $healLight;
+              }
+            }
+          }
+
+          //anchorlink fieldset
+          fieldset {
+            border-radius: 10px;
+            display: flex;
+            justify-content: space-around;
+            position: relative;
+            background: $dark;
+
+            &::before {
+              content: '';
+              position: absolute;
+              z-index: -1;
+              top: -.3rem;
+              border-radius: 10px;
+              animation: spin 2.5s linear infinite;
+            }
+
+            &.tank {
+              color: $tankLight;
+
+              .btn-minus {
+                background: $tankDark;
+                @include shadow($tankDark);
+
+                &:hover {
+                  color: $tankDark;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $tankDark;
+                  }
+                }
+              }
+
+              .btn-plus {
+                background: $tankLight;
+                @include shadow($tankLight);
+
+                &:hover {
+                  color: $tankLight;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $tankLight;
+                  }
+                }
+              }
+
+              &:before {
+                background-image: linear-gradient(var(--rotate), $tankLight 43%, $tankDark);
+              }
+            }
+
+            &.dps {
+              color: $dpsLight;
+
+              .btn-minus {
+                background: $dpsDark;
+                @include shadow($dpsDark);
+
+                &:hover {
+                  color: $dpsDark;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $dpsDark;
+                  }
+                }
+              }
+
+              .btn-plus {
+                background: $dpsLight;
+                @include shadow($dpsLight);
+
+                &:hover {
+                  color: $dpsLight;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $dpsLight;
+                  }
+                }
+              }
+
+              &:before {
+                background-image: linear-gradient(var(--rotate), $dpsLight 43%, $dpsDark);
+              }
+            }
+
+            &.heal {
+              color: $healLight;
+
+              .btn-minus {
+                background: $healDark;
+                @include shadow($healDark);
+
+                &:hover {
+                  color: $healLight;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $healDark;
+                  }
+                }
+              }
+
+              .btn-plus {
+                background: $healLight;
+                @include shadow($healLight);
+
+                &:hover {
+                  color: $healDark;
+                  border: none;
+                  background: none;
+
+                  svg {
+                    fill: $healDark;
+                  }
+                }
+              }
+
+              &:before {
+                background-image: linear-gradient(var(--rotate), $healLight 43%, $healDark);
+              }
+            }
+
+            span {
+              width: 100%;
+              display: flex;
+              flex-direction: row;
+              justify-content: space-around;
+              align-items: center;
+              position: absolute;
+
+              h3 {
+                font-weight: bold;
+              }
             }
           }
         }
       }
     }
+    #reset-content {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
-
-  #reset-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
   #confirm-popup {
     position: absolute;
     border-radius: 10px;
