--- a/view/login&register.html
+++ b/view/login&register.html
@@ -3,8 +3,8 @@
 <form action="controller/function/login&register.php?task=login" class="form-home" id="login" method="post">
 	<fieldset>
 		<legend>Connexion</legend>
-		<!--anchor cloose login-->
-		<div class="btn btn-cloose" id="login-cloose">
+		<!--anchor close login-->
+		<div class="btn btn-close" id="login-close">
 			<svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
 				<!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 				<path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/>
@@ -23,8 +23,8 @@
 <form action="controller/function/login&register.php?task=register" class="form-home" id="register" method="post">
 	<fieldset>
 		<legend>Inscription</legend>
-		<!--anchor cloose register-->
-		<div class="btn btn-cloose" id="register-cloose">
+		<!--anchor close register-->
+		<div class="btn btn-close" id="register-close">
 			<svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
 				<!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 				<path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/>
